# mesmer

./: .gitignore  CLAUDE.md  LICENSE.md  README.md  package.json  pnpm-lock.yaml  pyproject.toml
.codex/skills/mesmer-blog-writing-style/: SKILL.md
.codex/skills/mesmer-paper-primitive-extractor/: SKILL.md
.github/workflows/: ci.yml  release.yml
apps/docs/: .gitignore  README.md  package.json  playwright.config.ts  proxy.ts  source.config.ts
apps/docs/app/: global.css  layout.tsx  manifest.ts  robots.ts  sitemap.ts
apps/docs/lib/: i18n.ts  layout.shared.tsx  shared.ts  source.ts
apps/docs/tests/: smoke.spec.ts
docs/: primitive-architecture.md  primitive-component-tree-v2.md  primitive-component-tree.md  primitive-taxonomy-audit.md
docs/investigations/: blackbox-jailbreak-primitives-foundation-assessment.md
docs/learn/: 00-authorization-scope-and-whitehat-operating-model.md  01-threat-models-for-llm-apps-and-agents.md  02-prompt-injection-vs-jailbreaking-vs-model-misuse.md  03-classic-jailbreak-patterns-with-redacted-case-studies.md  04-representation-shifts-encoding-style-and-obfuscation.md  05-black-box-search-from-pair-to-tap.md  06-token-suffix-optimization-gcg-autodan-and-transfer.md  07-evaluation-judges-refusal-overrefusal-and-evidence-quality.md  08-bon-sampling-augmentation-and-query-budgeting.md  09-population-fuzzing-cross-behavior-memory-and-jbfuzz.md  10-many-shot-long-context-and-multi-turn-state.md  11-agentic-prompt-injection-rag-tools-and-mcp.md  12-chat-template-system-surface-and-deployment-fuzzing.md  13-defenses-bypasses-and-responsible-remediation.md  14-bug-bounty-reporting-portfolio-and-practice-programs.md  llm-jailbreak-paper-reading-path.md  llm-jailbreaking-curriculum.md  mesmer-primitives-for-jailbreak-labs.md
docs/papers/: 2508.04039v1-large-reasoning-models-autonomous-jailbreak-agents.md
docs/plan/: system-prompt-extraction-experiment-plan.md
docs/research/: blackbox-llm-vulnerability-analysis.md  evolution-of-llm-jailbreaking-techniques.md  llm-jailbreaking-papers-map.md
docs/tech/: jailbreak-framework-strategic-architecture-review.md  primitive-architecture.md  primitive-component-tree.md  primitive-taxonomy-audit.md
examples/: README.md  autonomous_agent.py  benchmark.py  common.py  frontier_search.py  prompt_patterns.py  single_turn.py  tree_search.py
examples/papers/jbfuzz/: README.md  datasets.toml  run_jbfuzz.py
examples/papers/large_reasoning_models_autonomous_jailbreak_agents/: README.md  run_autonomous_jailbreak_agent.py
examples/papers/pair/: README.md  run_pair.py
examples/papers/tap/: README.md  run_tap.py
src/mesmer/: __init__.py  conditions.py  evaluators.py  evidence.py  mutators.py  ops.py  population_strategies.py  proposers.py  rewards.py  selectors.py  sources.py  state.py  strategies.py  techniques.py  trajectory.py  transitions.py  workflow.py
src/mesmer/artifacts/: messages.py  models.py  serialization.py
src/mesmer/attackers/: base.py  components.py  graph.py  transforms.py
src/mesmer/benchmarking/: baseline.py  benchmark.py  metrics.py  report.py  runner.py
src/mesmer/constraints/: __init__.py
src/mesmer/core/: config.py  constants.py  enums.py  errors.py  registry.py
src/mesmer/data/: __init__.py
src/mesmer/datasets/: __init__.py  remote.py
src/mesmer/evaluation/: __init__.py
src/mesmer/execution/: budgets.py  context.py  gates.py  run.py  runner.py  selection.py  state.py
src/mesmer/flows/: base.py  (+5 more)
tests/unit/: test_agent_flow.py  test_benchmark.py  test_blackbox_gcg_primitives.py  test_elicitation_search.py  test_examples.py  test_fuzzing_primitives.py  test_graph_and_budget.py  test_iterative_search_technique.py  test_llm_components.py  test_objectives.py  test_output2prompt.py  test_primitives.py  test_prompt_patterns_and_transforms.py  test_recorder.py  test_registry.py  test_remote_datasets.py  test_runner.py  test_tap_like.py  test_taxonomy_api.py  test_verbose_runner.py
(+93 files in other folders)
