[project]
name = "mesmer-ai"
version = "0.0.0"
description = "Composable LLM red-team and benchmarking framework"
readme = "README.md"
requires-python = ">=3.11"
license = "Apache-2.0"
license-files = ["LICENSE.md"]
authors = [
    { name = "Mesmer contributors" },
]
maintainers = [
    { name = "Mesmer contributors" },
]
keywords = [
    "ai-safety",
    "benchmarking",
    "jailbreak",
    "llm",
    "red-team",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Typing :: Typed",
]
dependencies = [
    "httpx>=0.27.0",
    "litellm>=1.60.0",
    "opentelemetry-api>=1.25.0",
    "opentelemetry-sdk>=1.25.0",
    "pydantic>=2.7.0",
    "rich>=15.0.0",
    "websockets>=12.0",
]

[project.urls]
Homepage = "https://github.com/ghackdev/mesmer"
Repository = "https://github.com/ghackdev/mesmer"
Issues = "https://github.com/ghackdev/mesmer/issues"
Documentation = "https://github.com/ghackdev/mesmer#readme"

[project.optional-dependencies]
lexical-nlp = [
    "nltk>=3.9.0",
]
embedding-classifier = [
    "numpy>=1.26.0",
    "scikit-learn>=1.5.0",
    "sentence-transformers>=3.0.0",
]
hf-sequence-classifier = [
    "torch>=2.3.0",
    "transformers>=4.44.0",
]
fuzzing = [
    "nltk>=3.9.0",
    "numpy>=1.26.0",
    "scikit-learn>=1.5.0",
    "sentence-transformers>=3.0.0",
    "torch>=2.3.0",
    "transformers>=4.44.0",
]

[dependency-groups]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.6.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mesmer"]

[tool.hatch.build.targets.sdist]
include = [
    "/CHANGELOG.md",
    "/LICENSE.md",
    "/README.md",
    "/docs",
    "/examples",
    "/pyproject.toml",
    "/src",
    "/tests",
]
exclude = [
    "/.codex",
    "/.mesmer",
    "/.pytest_cache",
    "/.ruff_cache",
    "/.tmp",
    "/.venv",
    "/apps",
    "/build",
    "/dist",
    "/node_modules",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]

[tool.semantic_release]
allow_zero_version = true
assets = ["uv.lock"]
build_command = "uv lock && uv build"
commit_message = "chore(release): v{version}"
commit_parser = "conventional"
major_on_zero = false
tag_format = "v{version}"
version_toml = ["pyproject.toml:project.version"]

[tool.semantic_release.changelog.default_templates]
changelog_file = "CHANGELOG.md"

[tool.semantic_release.publish]
dist_glob_patterns = ["dist/*"]
upload_to_vcs_release = true
